--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -32,3 +32,4 @@ github:
     addComment: false
     # add a "Review in Gitpod" button to pull requests (defaults to false)
     addBadge: true
+    addCheck: true
