--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -33,3 +33,4 @@ github:
     # add a "Review in Gitpod" button to pull requests (defaults to false)
     addBadge: true
     addCheck: true
+    pullRequestsFromForks: true
